# cpu_train

./: .gitignore  CMakeLists.txt  MotionRecognitionModel.ipynb  README.md  compiler.text  how_to_github.txt  train_cpu.c  train_cpu_test.c
